# llist

./: .gitignore  ChangeLog  Makefile.am  NEWS  README.md  configure.ac  llist.pc  llist.pc.in
include/: llist.h
src/: llist.c  test-llist.c
windows/: NOTES.txt
